Fixed overflowing content

--- a/src/browser_action/ethsbell.css
+++ b/src/browser_action/ethsbell.css
@@ -15,13 +15,12 @@ body {
 	overflow: hidden;
 }
 
-#top {
+#current {
 	color: white;
 	background-color: #007bff;
 	width: 100%;
 	height: 90%;
-}
-#current {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	flex: 1;
@@ -39,7 +38,8 @@ body {
 	width: 100%;
 }
 
-#content, #schedulewrap {
+#content,
+#schedulewrap {
 	margin: 25px;
 }
 
@@ -50,7 +50,7 @@ body {
 }
 
 .big {
-	font-size: 250%;
+	font-size: 200%;
 }
 
 #content span {
@@ -71,7 +71,8 @@ body {
 	width: 100%;
 }
 
-#schedulewrap, #scroll {
+#schedulewrap,
+#scroll {
 	display: none;
 }
 
@@ -94,18 +95,21 @@ body {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-#table th, #table td {
+#table th,
+#table td {
 	padding: 15px 10px;
 	text-align: left;
 }
 
-#timeline, #timeline>svg {
+#timeline,
+#timeline > svg {
 	width: 100%;
 }
 
 #buttons {
-	position: relative;
+	position: absolute;
 	top: 0;
+	right: 0;
 	padding: 15px;
 	text-align: right;
 }
